service-about-done

--- a/src/services.html
+++ b/src/services.html
@@ -224,9 +224,9 @@
       <!-- slider section end --> 
 
     <!-- Services section start -->
-    <section class="py-120 bg-neutral-20">
+    <section class="py-120 bg-neutral-0 relative overflow-hidden z-[1]">
       <div class="cont">
-        <div class="flex justify-between flex-wrap items-end gap-5 mb-10 xl:mb-14">
+        <div class="flex justify-between flex-wrap items-end gap-5 mb-7 xl:mb-11">
           <div class="max-w-[500px] fade_anim">
             <p class="sub-heading mb-4 fade_anim"><span class="bg-yellow-300 w-2 h-2 block rounded-full"></span> What We Offer</p>
             <h2>Our Service</h2>
@@ -237,7 +237,7 @@
           <div class="swiper clientSlider2">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 border border-green-800 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
+                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 shadow-[0px_6px_30px_0px_rgba(0,0,0,0.06)] mt-4 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
                   <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">01</span>
                   <div class="mx-auto text-center xxl:w-[140px] w-[90px] xxl:h-[140px] h-[90px] border-dashed border-green-500 border-[2px] rounded-full f-center bg-green-50">
                     <svg class="xxl:w-[70px] xxl:h-[66px] w-[50px] h-[50px]" viewBox="0 0 72 66" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -257,7 +257,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 border border-green-800 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
+                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 shadow-[0px_6px_30px_0px_rgba(0,0,0,0.06)] mt-4 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
                   <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">02</span>
                   <div class="mx-auto text-center xxl:w-[140px] w-[90px] xxl:h-[140px] h-[90px] border-dashed border-green-500 border-[2px] rounded-full f-center bg-green-50">                    
                     <svg class="xxl:w-[70px] xxl:h-[66px] w-[50px] h-[50px]" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -287,8 +287,8 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 border border-green-800 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
-                  <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">02</span>
+                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 shadow-[0px_6px_30px_0px_rgba(0,0,0,0.06)] mt-4 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
+                  <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">03</span>
                   <div class="mx-auto text-center xxl:w-[140px] w-[90px] xxl:h-[140px] h-[90px] border-dashed border-green-500 border-[2px] rounded-full f-center bg-green-50">                                        
                     <svg class="xxl:w-[70px] xxl:h-[66px] w-[50px] h-[50px]" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M36.98 16.1319C41.3355 16.1319 44.8662 12.6011 44.8662 8.24562C44.8662 3.89017 41.3355 0.359375 36.98 0.359375C32.6245 0.359375 29.0938 3.89017 29.0938 8.24562C29.0938 12.6011 32.6245 16.1319 36.98 16.1319Z" fill="#526250"/>
@@ -307,7 +307,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 border border-green-800 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
+                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 shadow-[0px_6px_30px_0px_rgba(0,0,0,0.06)] mt-4 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
                   <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">01</span>
                   <div class="mx-auto text-center xxl:w-[140px] w-[90px] xxl:h-[140px] h-[90px] border-dashed border-green-500 border-[2px] rounded-full f-center bg-green-50">
                     <svg class="xxl:w-[70px] xxl:h-[66px] w-[50px] h-[50px]" viewBox="0 0 72 66" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -327,7 +327,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 border border-green-800 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
+                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 shadow-[0px_6px_30px_0px_rgba(0,0,0,0.06)] mt-4 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
                   <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">02</span>
                   <div class="mx-auto text-center xxl:w-[140px] w-[90px] xxl:h-[140px] h-[90px] border-dashed border-green-500 border-[2px] rounded-full f-center bg-green-50">                    
                     <svg class="xxl:w-[70px] xxl:h-[66px] w-[50px] h-[50px]" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -357,8 +357,8 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 border border-green-800 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
-                  <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">02</span>
+                <div class="fade_anim text-center p-6 md:p-7 xxl:p-8 shadow-[0px_6px_30px_0px_rgba(0,0,0,0.06)] mt-4 bg-neutral-0 relative group hover:border-green-300 duration-300">                   
+                  <span class="display-3 text-green-700 font-playfair absolute top-2 end-7 block">03</span>
                   <div class="mx-auto text-center xxl:w-[140px] w-[90px] xxl:h-[140px] h-[90px] border-dashed border-green-500 border-[2px] rounded-full f-center bg-green-50">                                        
                     <svg class="xxl:w-[70px] xxl:h-[66px] w-[50px] h-[50px]" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M36.98 16.1319C41.3355 16.1319 44.8662 12.6011 44.8662 8.24562C44.8662 3.89017 41.3355 0.359375 36.98 0.359375C32.6245 0.359375 29.0938 3.89017 29.0938 8.24562C29.0938 12.6011 32.6245 16.1319 36.98 16.1319Z" fill="#526250"/>
@@ -377,15 +377,57 @@
                 </div>
               </div>
             </div>
-            <div class="client4-pagination"></div>
+            <div class="client4-pagination xxl:mt-14 xl:mt-10 mt-8 relative z-10"></div>
           </div>          
         </div>
       </div>
+      <img src="assets/images/element/flower-circle.png" alt="img" class="absolute bottom-[280px] circle end-[-140px] max-w-[300px] xl:block hidden">
+      <img src="assets/images/element/dots-ele.png" alt="img" class="absolute top-[290px] start-[-30px] updown z-[-1] xl:block hidden">
     </section>
     <!-- Services section end -->
 
+    <!-- about section start -->
+    <section class="py-120 bg-neutral-20 relative overflow-hidden">
+      <div class="cont xs:grid grid-cols-12 lg:gap-4 gap-7 items-center">
+        <div class="col-start-1 md:col-end-6 col-span-12 relative">          
+            <div class="fade_anim w-full" data-fade-from="right" data-delay=".4">
+              <img src="assets/images/about/about-mbig.webp" class="w-full h-auto" alt="" />          
+            </div>
+            <div class="grid gap-5 md:absolute 3xl:start-[-150px] top-[50px] md:mt-0 mt-4">
+              <a href="services.html" class="circular-text-big relative !p-0 border-0 f-center">
+                <p class="text !leading-[0]" data-text="Yogay - Theme - Studio - Yogay"></p>
+                <div class="w-[80px] min-w-[80px] h-[80px] absolute rounded-full f-center">
+                  <button class="size-14 rounded-full bg-green-300 text-neutral-700 f-center text-2xl">
+                    <svg width="48" height="48" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M37.4541 40.754C36.8693 38.172 37.0477 34.3808 37.1964 31.333C37.2955 29.2317 37.3798 27.4178 37.2162 26.3771C36.8148 23.8348 36.7652 22.7445 36.7652 22.7346C36.7652 22.7148 36.7603 22.6999 36.7603 22.685C36.7603 22.6701 36.7603 22.6801 36.7553 22.6751C36.0516 20.0634 28.8805 8.37255 28.5732 7.87697C28.5479 7.83173 28.5076 7.7967 28.4593 7.77785C28.3849 7.74316 20.629 4.37815 19.4495 3.76858C18.9589 3.51583 18.3543 3.17388 17.6506 2.75759C17.0014 2.37103 16.1985 2.31156 15.4997 2.59405C14.7762 2.88149 13.8445 3.25813 13.2795 3.48114C12.9921 3.59513 12.7592 3.8231 12.6452 4.11053C12.5312 4.3831 12.5312 4.68046 12.6501 4.94311C12.8236 5.34949 13.1953 5.57251 13.7454 5.62206C13.3291 5.81039 12.9822 5.93428 12.7146 5.97888C12.11 6.08296 11.7085 6.41995 11.5945 6.93041C11.426 7.649 11.8572 8.51132 12.3528 8.85823C12.4916 9.01681 12.7195 10.1269 12.9376 11.2023C13.3489 13.2095 13.9535 16.1433 15.0141 18.869C15.019 18.8888 15.024 18.9037 15.0339 18.9235C15.9111 21.1685 17.1005 23.2599 18.7508 24.5435L20.1186 29.3605C19.9848 29.6727 19.846 29.9998 19.7073 30.3517C18.6269 33.0179 17.9132 35.3571 17.3879 37.0619L17.1203 37.9292C16.59 39.634 15.9458 41.8294 15.807 42.885L10.6876 44.1289C10.4448 44.1884 10.2812 44.4015 10.2812 44.6493C10.2812 44.793 10.3358 44.9268 10.4349 45.0259C10.534 45.125 10.6678 45.1796 10.8115 45.1796H15.8467C16.0697 45.3183 16.367 45.4174 16.7486 45.4571C17.2541 45.5166 19.2513 45.5314 21.6797 45.5314C26.353 45.5314 32.6271 45.462 33.0137 45.4571C33.1128 45.4571 35.3578 45.5116 36.7008 44.2181C37.3352 43.6086 37.6623 42.8107 37.6722 41.8443C37.6771 41.4528 37.5978 41.091 37.4541 40.754ZM23.2903 41.5816C22.7055 41.9186 22.0365 42.4588 21.7788 42.6719C21.3328 42.5331 19.8807 42.1664 18.3097 42.4836C18.8499 40.08 19.7568 38.0035 21.0106 36.3037C21.199 37.5079 21.7738 40.1841 23.2903 41.5816ZM17.7695 14.2551C17.2343 13.1748 16.813 12.3174 16.5306 11.8912C15.6881 10.6275 15.4799 8.64017 15.4403 8.14954L17.5812 6.11765C17.6902 6.01358 17.829 5.96402 17.9777 5.95906H18.617C19.0283 6.2019 20.5993 7.12864 21.64 7.99095C22.7898 8.94248 26.0854 10.1517 26.7445 10.3896L27.6911 12.9765H27.3987C27.0419 12.4909 25.5651 10.7662 22.874 11.8218C21.1841 12.4859 20.3912 14.6912 20.3565 16.5844C20.3218 18.3982 20.9561 20.6283 22.8393 21.451C23.3002 21.6492 23.7611 21.7484 24.2171 21.7484C24.8564 21.7484 25.4907 21.5402 26.1201 21.1487L26.7495 22.2142C25.8277 22.7594 24.3211 23.919 23.999 24.1718C23.9941 24.1668 23.9891 24.1569 23.9841 24.1519C21.3972 21.6096 19.2166 17.184 17.7695 14.2551ZM36.5621 35.2728C34.1535 37.5525 28.5832 36.1798 27.4284 35.8626C27.3938 35.1787 27.3194 34.5245 27.2253 33.905C28.147 34.1132 30.511 34.5939 32.8105 34.5939C34.208 34.5939 35.5808 34.4155 36.5918 33.8902C36.5769 34.3461 36.567 34.812 36.5621 35.2728ZM29.7527 20.8563C29.8816 21.0744 29.951 21.3222 29.951 21.57C29.951 22.0308 29.723 22.462 29.3464 22.7197C29.0242 22.9378 28.6426 23.0121 28.261 22.9279C28.0757 22.8884 27.9007 22.8107 27.7471 22.6998C27.5935 22.5888 27.4647 22.4471 27.369 22.2836L27.3293 22.2142C27.3293 22.2142 27.3244 22.1944 27.3194 22.1894C27.3095 22.1746 27.2996 22.1647 27.2897 22.1498L26.576 20.9505C27.3987 20.891 28.3106 20.5986 29.1481 19.8552L29.7527 20.8563ZM29.391 18.8888C28.3948 20.1476 27.2054 20.4846 26.2143 20.4846C26.1803 20.4747 26.1442 20.4747 26.1102 20.4846C25.1388 20.4598 24.3856 20.1278 24.2468 20.0634C23.2259 19.3051 22.6213 18.1455 22.5519 16.7876C22.4825 15.499 22.9236 14.1858 23.6571 13.5217C24.9753 12.3174 27.1311 13.4424 27.1559 13.4523C27.1608 13.4572 27.1658 13.4523 27.1707 13.4572C27.2005 13.4672 27.2302 13.4771 27.2599 13.4771C27.2699 13.4771 27.2748 13.482 27.2798 13.482L29.0044 13.4374L29.049 14.5029C29.049 14.5822 29.0887 14.6566 29.158 14.7012C29.163 14.7061 30.065 15.3256 30.2335 16.4109C30.3524 17.189 30.0699 18.0216 29.391 18.8888ZM19.9204 5.07692C19.9402 4.85887 19.8807 4.64576 19.7667 4.47231C21.7689 5.40896 27.4433 7.87697 28.1916 8.1991C28.7764 9.15062 35.338 19.9048 36.2251 22.6404C35.4668 23.1608 34.7135 23.3194 33.985 23.0963C31.8887 22.457 30.511 19.0177 30.288 18.428C30.6795 17.7143 30.8282 17.0106 30.7191 16.3316C30.5556 15.2661 29.8172 14.5872 29.5396 14.3691L29.4901 13.1698C29.4851 13.036 29.3711 12.9369 29.2373 12.9319L28.2115 12.9617L27.1707 10.1071C27.1575 10.0726 27.1369 10.0414 27.1104 10.0158C27.0838 9.99007 27.052 9.9705 27.0171 9.95842C26.9824 9.94355 23.1416 8.59061 21.9572 7.60936C21.1544 6.94527 20.0789 6.26137 19.4 5.85499C19.6874 5.70136 19.8906 5.41887 19.9204 5.07692ZM13.1011 4.74488C13.0417 4.60612 13.0417 4.44753 13.1011 4.29886C13.1655 4.13531 13.2994 4.00646 13.4629 3.94204C14.0279 3.71902 14.9596 3.34238 15.6831 3.05494C16.2382 2.83193 16.8824 2.87653 17.3978 3.18379C17.8736 3.46627 18.2998 3.70911 18.6814 3.91726L18.4584 3.85779C17.6654 3.64468 16.818 3.78345 16.1341 4.23939C15.6782 4.54169 15.252 4.80435 14.8555 5.03728C14.1369 5.19091 13.3192 5.24046 13.1011 4.74488ZM13.4233 11.1032C13.0516 9.28443 12.9078 8.64513 12.6501 8.46176C12.2933 8.20901 11.9613 7.53502 12.0753 7.03943C12.1446 6.72722 12.3875 6.53394 12.7939 6.46951C13.4084 6.36544 14.241 5.96402 15.0537 5.49817C15.0934 5.48826 15.1281 5.4833 15.1727 5.47339C15.252 5.45357 15.3065 5.3941 15.3362 5.32967C15.7128 5.1017 16.0796 4.86878 16.4116 4.65072C16.6904 4.46457 17.0058 4.34038 17.3367 4.28652C17.6676 4.23266 18.0061 4.25039 18.3295 4.3385L19.0779 4.53674C19.1884 4.56781 19.284 4.6377 19.3472 4.73359C19.4104 4.82947 19.4369 4.94492 19.4218 5.05875C19.4068 5.17259 19.3512 5.27718 19.2652 5.35334C19.1793 5.4295 19.0688 5.47212 18.954 5.47339H18.7458C18.7124 5.45508 18.6749 5.44549 18.6368 5.44549C18.5987 5.44549 18.5612 5.45508 18.5278 5.47339H17.9777C17.7033 5.46808 17.4379 5.57139 17.2392 5.76083L15.0141 7.87201C14.9645 7.92157 14.9348 7.99591 14.9397 8.06529C14.9397 8.16936 15.0785 10.6175 16.1143 12.1687C16.3819 12.5701 16.7982 13.4126 17.3235 14.4781C17.7596 15.3603 18.2651 16.3812 18.8251 17.4417C18.531 17.9371 18.0915 18.3299 17.5663 18.5667C16.6545 18.9731 15.8021 18.7501 15.4452 18.6212C14.4243 15.9599 13.8247 13.0756 13.4233 11.1082V11.1032ZM15.6732 43.8613C15.4452 44.0843 15.361 44.4065 15.4452 44.684L10.7867 44.6741C10.7867 44.6741 10.8066 44.6146 10.8016 44.6096L16.0944 43.3261C16.1985 43.3013 16.2729 43.2121 16.2828 43.1031C16.3422 42.3894 16.8081 40.6004 17.5961 38.0778L17.8637 37.2056C18.384 35.5107 19.0977 33.1864 20.1632 30.5351C22.1901 25.5247 23.2061 24.7566 23.999 24.6723C24.7672 24.5881 25.3916 24.9548 25.3966 24.9597C25.8327 25.2224 26.1697 25.6684 26.3431 26.2086C26.5661 26.9074 26.3877 27.512 26.2589 27.9531C26.1746 28.2554 26.0012 28.7113 25.679 29.1722C23.8949 31.7393 22.9979 33.0328 20.9859 35.5157C20.2127 36.4622 19.5586 37.5377 19.0233 38.7271C18.4881 39.9115 18.0718 41.2149 17.7695 42.6223C17.0509 42.8454 16.3224 43.222 15.6732 43.8613ZM16.8031 44.9665C16.3075 44.9119 15.9953 44.7633 15.921 44.5551C15.8813 44.4461 15.921 44.3123 16.0201 44.2181C18.2701 41.9979 21.7193 43.1724 21.754 43.1824C21.8383 43.2121 21.9275 43.1972 21.9968 43.1378C22.0068 43.1278 23.1268 42.1714 23.8256 41.8591C24.1427 41.7204 24.7027 41.9583 25.1636 42.2407C24.227 42.553 23.6471 42.7958 23.6273 42.8057C23.5034 42.8602 23.444 43.004 23.4985 43.1278C23.5381 43.222 23.6323 43.2815 23.7264 43.2815C23.7611 43.2815 23.7958 43.2716 23.8256 43.2616C23.8454 43.2517 24.5541 42.9544 25.684 42.5926C25.7831 42.6422 25.902 42.6174 25.9764 42.5282L25.9913 42.4985C27.369 42.0822 29.272 41.6114 31.3039 41.4478C31.5071 41.7055 32.0126 42.439 31.963 43.3162C31.9283 43.9208 31.6211 44.4808 31.0561 44.9813C26.9923 45.021 17.9281 45.0904 16.8031 44.9665Z" fill="white"/>
+                    </svg>                      
+                  </button>
+                </div>
+              </a>
+              <div class="relative f-center xxl:max-w-[405px] md:max-w-[260px] max-w-[100%] w-[100%] md:mb-0 mb-4">
+                <img src="assets/images/about/aboutm-small.webp" class="fade_anim border-4 border-neutral-0 bg-neutral-0" alt="about-thumb">
+                <a href="https://www.youtube-nocookie.com/embed/wY8DMF8nlw0" class="topbar-btn bg-neutral-0 pulse-effect absolute z-[3] text-neutral-900">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="size-6" viewBox="0 0 256 256">
+                    <rect width="256" height="256" fill="none"></rect>
+                    <path fill="currentColor" d="M240,128a15.74,15.74,0,0,1-7.6,13.51L88.32,229.65a16,16,0,0,1-16.2.3A15.86,15.86,0,0,1,64,216.13V39.87a15.86,15.86,0,0,1,8.12-13.82,16,16,0,0,1,16.2.3L232.4,114.49A15.74,15.74,0,0,1,240,128Z"></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+        </div>
+        <div class="md:col-start-7 md:col-end-13 col-span-12">
+          <div>
+            <p class="sub-heading mb-4 fade_anim"><span class="bg-yellow-300 w-2 h-2 block rounded-full"></span> ABOUT US</p>
+            <h1 class="mb-4 xl:mb-6 title_anim" data-fade-from="right">Healing Together in Harmony</h1>
+            <p class="text-neutral-600 lg:text-lg text-base mb-6 xl:mb-8 fade_anim" data-fade-from="right" data-delay=".4">Group therapy fosters a safe, supportive environment where individuals share experiences, build connections, and grow together, creating harmony and strength through collective healing.</p>
+            <a href="about-us.html" class="btn-primary">LEARN MORE <i class="hgi-stroke hgi-arrow-up-right-01 text-neutral-700"></i></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Services section start -->
-    <section class="py-120 bg-neutral-20">
+    <section class="py-120 bg-neutral-0">
       <div class="cont">
         <div class="flex justify-between flex-wrap items-end gap-5 mb-10 xl:mb-14">
           <div class="max-w-[500px] fade_anim">
