blog-sidebar-done

--- a/src/about-us.html
+++ b/src/about-us.html
@@ -585,7 +585,7 @@
                 <div class="overflow-hidden duration-300 xxl:mb-8 xl:mb-6 mb-4">
                   <img src="assets/images/blog/blog-grid1.webp" alt="img" class="overflow-hidden duration-300 w-full group-hover:scale-[1.1]">
                 </div>
-                <a href="#0" class="duration-300 hover:text-green-300 inline-flex items-center gap-2 border-b border-neutral-900 text-neutral-900 text-base uppercase pb-2">
+                <a href="blog-details.html" class="duration-300 hover:text-green-300 inline-flex items-center gap-2 border-b border-neutral-900 text-neutral-900 text-base uppercase pb-2">
                   VIEW MORE
                   <svg width="27" height="16" viewBox="0 0 27 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 8.37305L25 8.37305" stroke="#090C10"/>
@@ -627,7 +627,7 @@
                 <div class="overflow-hidden duration-300 xxl:mb-8 xl:mb-6 mb-4">
                   <img src="assets/images/blog/blog-grid2.webp" alt="img" class="overflow-hidden duration-300 w-full group-hover:scale-[1.1]">
                 </div>
-                <a href="#0" class="duration-300 hover:text-green-300 inline-flex items-center gap-2 border-b border-neutral-900 text-neutral-900 text-base uppercase pb-2">
+                <a href="blog-details.html" class="duration-300 hover:text-green-300 inline-flex items-center gap-2 border-b border-neutral-900 text-neutral-900 text-base uppercase pb-2">
                   VIEW MORE
                   <svg width="27" height="16" viewBox="0 0 27 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 8.37305L25 8.37305" stroke="#090C10"/>
