blog-left-sidebar-running

--- a/src/blog-left-sidebar.html
+++ b/src/blog-left-sidebar.html
@@ -228,27 +228,12 @@
         <div class="col-span-12 md:col-span-7 xl:col-span-8">
           <div class="relative">
             <div class="relative z-[1]">
-              <img src="./assets/images/blog-details-1.webp" class="reveal_anim rounded-xl w-full mb-4 xl:mb-6" alt="" />
-              <h2 class="mb-4 xl:mb-6 reveal_anim">Eco-Friendly Farming Practices For Newcomers.</h2>
-              <div class="flex gap-4">
-                <p class="flex items-center gap-2 mb-3 xl:mb-5">
-                  <i class="hgi-stroke hgi-user text-yellow-200 text-lg"></i>
-                  <span class="font-medium">Alex Thompson</span>
-                </p>
-                <p class="flex items-center gap-2 mb-3 xl:mb-5">
-                  <i class="hgi-stroke hgi-calendar-03 text-yellow-200 text-lg"></i>
-                  <span class="font-medium">January 10, 2025</span>
-                </p>
-              </div>
-              <span class="h-px w-full block bg-neutral-40 mb-7 relative after:absolute after:w-32 after:h-2 after:bg-yellow-200 after:top-full after:left-0 after:-skew-x-[22deg]"></span>
-              <p class="m-text text-neutral-600 mb-6">
-                Starting an eco-friendly farm can be a rewarding and sustainable journey, especially for those new to farming. Embracing environmentally conscious practices not only helps protect the planet but also ensures long-term success in Physiotherapy. For newcomers, the first step is to focus on soil health, as healthy soil is the foundation
-                of any thriving farm. Incorporating organic fertilizers, compost, and cover crops can enhance soil fertility naturally, reducing the need for chemical inputs. Crop rotation is another crucial practice that helps maintain soil structure and prevent pest and disease build-up. Additionally, conserving water through efficient irrigation
-                <br />
-                <br />
-                methods such as drip irrigation and rainwater harvesting can minimize water waste and ensure crops receive the right amount of hydration. Reducing pesticide use and instead relying on natural pest control methods, like introducing beneficial insects or using companion planting, supports a balanced ecosystem. Not only do these
-                practices help reduce environmental impact, but they also contribute to healthier and more
-              </p>
+              <img src="./assets/images/blog/blog-big1.webp" class="reveal_anim w-full mb-4 xl:mb-6" alt="" />
+              <h2 class="mb-4 xl:mb-6 reveal_anim">
+                <a href="#0">
+                  Preventive Chiropractic for Long-Term Health
+                </a>
+              </h2>
               <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mb-6">
                 <img src="./assets/images/blog-details-2.webp" class="reveal_anim rounded-2xl" alt="" />
                 <img src="./assets/images/blog-details-3.webp" class="reveal_anim rounded-2xl" alt="" data-reveal-from="right" />
