blog-details-running

--- a/src/blog-right-sidebar.html
+++ b/src/blog-right-sidebar.html
@@ -143,10 +143,10 @@
     <section class="pt-[72px] lg:pt-[81px] xxl:pt-[112px] relative" data-bg="assets/images/home1/breadcrumb-banner.png">
       <div class="cont py-16 xl:py-20 flex justify-center text-center">
         <div class="text-neutral-900 relative z-[1] reveal_anim" data-reveal-from="bottom">
-          <h2 class="mb-5">BLOG LEFT SIDE BAR</h2>
+          <h2 class="mb-5">BLOG RIGHT SIDE BAR</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
             <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
-            <span class="text-yellow-200 uppercase">BLOG LEFT SIDE BAR</span>
+            <span class="text-yellow-200 uppercase">BLOG RIGHT SIDE BAR</span>
           </div>
         </div>
       </div>
@@ -224,94 +224,7 @@
 
     <!-- Blog Details section start -->
     <section class="bg-neutral-0 py-120">
-      <div class="cont grid grid-cols-12 gap-6">        
-        <div class="col-span-12 md:col-span-5 xl:col-span-4 space-y-4 xl:space-y-6">
-          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
-            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">Search</h4>
-            <form class="px-3 py-2 w-full bg-neutral-20 border border-neutral-0 focus-within:border-green-500 flex items-center gap-2">
-              <input type="text" placeholder="Search" id="search" class="bg-transparent w-full py-0.5" />
-              <button class="w-[44px] min-w-[44px] h-[44px] bg-green-300 text-neutral-0"><i class="hgi-stroke hgi-search-01"></i></button>
-            </form>
-          </div>
-          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
-            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">Categories</h4>
-            <ul class="space-y-3 border-b border-neutral-30 pb-5 mb-6 list-disc ps-4">
-              <li>
-                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Holistic Wellness (4)</a>
-              </li>
-              <li>
-                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Pain Management (4)</a>
-              </li>
-              <li>
-                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Spinal Health (4)</a>
-              </li>
-              <li>
-                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Stress Relief (4)</a>
-              </li>
-              <li>
-                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Chiropractic Benefits (4)</a>
-              </li>
-            </ul>
-            <div class="flex items-center xl:gap-3 gap-2 mb-6">
-              <img src="assets/images/blog/emily.png" alt="img" class="rounded-full w-16 h-16">
-              <div>
-                <span class="block text-neutral-900 mb-1 text-xl">Dr. Emily Carter</span>
-                <span class="block text-neutral-900 mb-1 text-sm">Skin Spacialist</span>
-              </div>
-            </div>
-            <a href="blog-details.html" class="py-4 px-4 w-full text-center f-center bg-green-300 text-neutral-0 hover:bg-green-400 font-semibold duration-300">Book  Appointment</a>
-          </div>
-          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
-            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">RECENT POST</h4>
-            <div class="space-y-4">
-              <div class="flex items-center gap-3">
-                <div class="size-[86px] shrink-0">
-                  <img src="./assets/images/blog/blog-recent1.png" class="object-cover object-center h-full" alt="" />
-                </div>
-                <div>
-                  <p class="xl:text-base text-sm text-neutral-400 mb-1">December 6, 2025</p>
-                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Managing Stress Through Daily Practices</a>
-                </div>
-              </div>
-              <div class="flex items-center gap-3">
-                <div class="size-[86px] shrink-0">
-                  <img src="./assets/images/blog/blog-recent2.png" class="object-cover object-center h-full" alt="" />
-                </div>
-                <div>
-                  <p class="xl:text-base text-sm text-neutral-400 mb-1">December 3, 2025</p>
-                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Chiropractic Care for Active Lifestyles</a>
-                </div>
-              </div>
-              <div class="flex items-center gap-3">
-                <div class="size-[86px] shrink-0">
-                  <img src="./assets/images/blog/blog-recent3.png" class="object-cover object-center h-full" alt="" />
-                </div>
-                <div>
-                  <p class="xl:text-base text-sm text-neutral-400 mb-1">November 27, 2025</p>
-                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Benefits of Group Therapy Sessions</a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
-            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">RELETED TAGS</h4>
-            <div class="flex flex-wrap gap-2">
-              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">practice</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Expert</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Massage</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Center</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Health</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">therapy</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">trauma</a>
-            </div>
-          </div>
-          <div class="f-center py-20 lg:h-[440px] relative after:absolute after:w-full after:h-full after:top-0 after:start-0 after:bg-neutral-900 after:opacity-50 bg-cover after:z-[-1] z-[1]" data-bg="assets/images/global/product-big-thumbnail1.webp">
-            <div class="flex flex-col items-center">
-              <h1 class="text-neutral-0 lg:mb-14 mb-10">WellHub</h1>
-              <a href="contact-us.html" class="btn-primary !bg-neutral-0 !text-neutral-900">Get in Touch <i class="hgi-stroke hgi-arrow-right-01 !text-neutral-0 !bg-green-300"></i></a>
-            </div>
-          </div>
-        </div>
+      <div class="cont grid grid-cols-12 gap-6">                
         <div class="col-span-12 md:col-span-7 xl:col-span-8">
           <div class="grid grid-cols-12 gap-6">
             <div class="col-span-12 sm:col-span-6">
@@ -529,6 +442,93 @@
             <a href="#" class="navigation-btn size-10 text-base">3</a>
             <a href="#" class="navigation-btn size-10 text-base">4</a>
             <a href="#" class="navigation-btn size-10 text-base">5</a>
+          </div>
+        </div>
+        <div class="col-span-12 md:col-span-5 xl:col-span-4 space-y-4 xl:space-y-6">
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">Search</h4>
+            <form class="px-3 py-2 w-full bg-neutral-20 border border-neutral-0 focus-within:border-green-500 flex items-center gap-2">
+              <input type="text" placeholder="Search" id="search" class="bg-transparent w-full py-0.5" />
+              <button class="w-[44px] min-w-[44px] h-[44px] bg-green-300 text-neutral-0"><i class="hgi-stroke hgi-search-01"></i></button>
+            </form>
+          </div>
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">Categories</h4>
+            <ul class="space-y-3 border-b border-neutral-30 pb-5 mb-6 list-disc ps-4">
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Holistic Wellness (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Pain Management (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Spinal Health (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Stress Relief (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Chiropractic Benefits (4)</a>
+              </li>
+            </ul>
+            <div class="flex items-center xl:gap-3 gap-2 mb-6">
+              <img src="assets/images/blog/emily.png" alt="img" class="rounded-full w-16 h-16">
+              <div>
+                <span class="block text-neutral-900 mb-1 text-xl">Dr. Emily Carter</span>
+                <span class="block text-neutral-900 mb-1 text-sm">Skin Spacialist</span>
+              </div>
+            </div>
+            <a href="blog-details.html" class="py-4 px-4 w-full text-center f-center bg-green-300 text-neutral-0 hover:bg-green-400 font-semibold duration-300">Book  Appointment</a>
+          </div>
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">RECENT POST</h4>
+            <div class="space-y-4">
+              <div class="flex items-center gap-3">
+                <div class="size-[86px] shrink-0">
+                  <img src="./assets/images/blog/blog-recent1.png" class="object-cover object-center h-full" alt="" />
+                </div>
+                <div>
+                  <p class="xl:text-base text-sm text-neutral-400 mb-1">December 6, 2025</p>
+                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Managing Stress Through Daily Practices</a>
+                </div>
+              </div>
+              <div class="flex items-center gap-3">
+                <div class="size-[86px] shrink-0">
+                  <img src="./assets/images/blog/blog-recent2.png" class="object-cover object-center h-full" alt="" />
+                </div>
+                <div>
+                  <p class="xl:text-base text-sm text-neutral-400 mb-1">December 3, 2025</p>
+                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Chiropractic Care for Active Lifestyles</a>
+                </div>
+              </div>
+              <div class="flex items-center gap-3">
+                <div class="size-[86px] shrink-0">
+                  <img src="./assets/images/blog/blog-recent3.png" class="object-cover object-center h-full" alt="" />
+                </div>
+                <div>
+                  <p class="xl:text-base text-sm text-neutral-400 mb-1">November 27, 2025</p>
+                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Benefits of Group Therapy Sessions</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">RELETED TAGS</h4>
+            <div class="flex flex-wrap gap-2">
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">practice</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Expert</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Massage</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Center</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Health</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">therapy</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">trauma</a>
+            </div>
+          </div>
+          <div class="f-center py-20 lg:h-[440px] relative after:absolute after:w-full after:h-full after:top-0 after:start-0 after:bg-neutral-900 after:opacity-50 bg-cover after:z-[-1] z-[1]" data-bg="assets/images/global/product-big-thumbnail1.webp">
+            <div class="flex flex-col items-center">
+              <h1 class="text-neutral-0 lg:mb-14 mb-10">WellHub</h1>
+              <a href="contact-us.html" class="btn-primary !bg-neutral-0 !text-neutral-900">Get in Touch <i class="hgi-stroke hgi-arrow-right-01 !text-neutral-0 !bg-green-300"></i></a>
+            </div>
           </div>
         </div>
       </div>
