--- a/src/blog-details.html
+++ b/src/blog-details.html
@@ -143,10 +143,10 @@
     <section class="pt-[72px] lg:pt-[81px] xxl:pt-[112px] relative" data-bg="assets/images/home1/breadcrumb-banner.png">
       <div class="cont py-16 xl:py-20 flex justify-center text-center">
         <div class="text-neutral-900 relative z-[1] reveal_anim" data-reveal-from="bottom">
-          <h2 class="mb-5">SIGN UP</h2>
+          <h2 class="mb-5">Blog Details</h2>
           <div class="font-semibold flex justify-center items-center gap-2">
             <a href="index.html" class="uppercase">Home</a> <i class="hgi hgi-stroke hgi-arrow-right-01"></i>
-            <span class="text-yellow-200 uppercase">SIGN UP</span>
+            <span class="text-yellow-200 uppercase">Blog Details</span>
           </div>
         </div>
       </div>
@@ -223,9 +223,72 @@
     <!-- slider section end --> 
 
     <!-- Blog Details section start -->
-    <section class="bg-neutral-0 py-120">
+    <section class="bg-neutral-0 py-120 overflow-hidden">
+      <div class="cont xxl:mb-14 xl:mb-10 lg:mb-8 mb-7">
+        <img src="assets/images/blog/blog-details-big.webp" alt="img" class="reveal_anim w-full xxl:mb-10 xl:mb-8 mb-7">
+        <div class="flex justify-center text-center">
+          <div class="max-w-[880px] mx-auto">
+              <span class="bg-green-300 rounded-full text-neutral-0 text-base py-3 px-5 inline-block xl:mb-3 lg:mb-2 mb-2">Practice</span>
+              <h2 class="display-4 text-neutral-900 xl:mb-6 mb-4">
+                  Managing Anger with Healthy Coping Strategies
+              </h2>
+              <div class="flex justify-center items-center sm:gap-5 gap-4 flex-wrap">
+                <div class="flex items-center gap-2">
+                  <img src="assets/images/blog/blog-details-author4.webp" alt="img" class="bg-cover w-10 h-10 rounded-full">
+                  <p class="text-base text-neutral-400">Lucas Wright</p>
+                </div>
+                <div class="flex items-center gap-2">
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M6.24832 11.2505C8.33165 13.3339 11.665 13.3339 13.7483 11.2505M14.8333 14.4105C14.8333 14.4105 14.8975 14.3647 15 14.2864C16.5358 13.0989 17.5 11.378 17.5 9.46219C17.5 5.89052 14.1417 2.99219 10 2.99219C5.85833 2.99219 2.5 5.89052 2.5 9.46219C2.5 13.0355 5.85833 15.8339 10 15.8339C10.3533 15.8339 10.9333 15.8105 11.74 15.7639C12.7917 16.4472 14.3267 17.008 15.67 17.008C16.0858 17.008 16.2817 16.6664 16.015 16.318C15.61 15.8214 15.0517 15.0255 14.835 14.4097L14.8333 14.4105Z" stroke="#526250" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                    
+                  <p class="text-base text-neutral-400">04 Comments</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
       <div class="cont grid grid-cols-12 gap-6">
         <div class="col-span-12 md:col-span-7 xl:col-span-8">
+          <div class="relative xxl:mb-14 xl:mb-10 lg:mb-8 mb-7">
+            <div class="xxl:mb-8 xl:mb-6 mb-6">
+              <h4 class="text-neutral-900 xxl:mb-5 mb-3">The Journey to Wellness</h4>
+              <p class="xxl:text-lg text-base text-neutral-400">
+                Wellness is a holistic journey that nurtures the mind, body, and soul, fostering harmony in every aspect of life. Through consistent care, self-awareness, and positive habits, individuals can achieve a state of balance that empowers them to thrive. This path is about more than just overcoming challenges; it’s about building resilience, rediscovering inner strength, and embracing a lifestyle that promotes long-term health and happiness.
+              </p>
+            </div>
+            <div class="flex items-center xl:gap-6 lg:gap-4 gap-3 xxl:mb-8 xl:mb-6 mb-6">
+              <img src="./assets/images/blog/blog-details1.webp" class="reveal_anim" alt="img" />
+              <img src="./assets/images/blog/blog-details2.webp" class="reveal_anim" alt="img" data-reveal-from="right" />
+            </div>
+            <p class="xxl:text-lg text-base text-neutral-400 xxl:mb-3 xl:mb-2 mb-1">
+              Wellness is a lifelong commitment to achieving balance in all facets of life, from mental health to physical vitality. It is about understanding your unique needs and adopting practices that enhance your well-being. Every small step on this path contributes to a greater sense of purpose, inner peace, and the ability to live each day with renewed energy and optimism. Embracing wellness means cultivating habits that support your physical health, emotional stability, and mental clarity. It’s a journey of gradual improvement, where each effort strengthens your resilience and enriches your quality of life. By focusing on self-compassion and prioritizing what truly matters, the wellness journey fosters a sense of empowerment and fulfillment that radiates through every aspect of life.
+            </p>
+            <p class="xxl:text-lg text-base text-neutral-400">
+              The journey to wellness is a personal expedition toward a healthier and more vibrant life. It’s about recognizing what nourishes your mind and body, from positive relationships to purposeful activities.
+            </p>
+          </div>
+          <div class="overflow-hidden bg-neutral-20 p-4 text-center xl:p-10 border-l-4 border-green-300 relative xxl:mb-14 xl:mb-10 lg:mb-8 mb-7">
+            <div class="flex flex-col items-center max-w-2xl mx-auto">
+              <p class="xl:text-2xl text-xl font-semibold text-neutral-900 xl:mb-5 mb-3 uppercase">HEALING BEGINS WITH UNDERSTANDING AND SELF-COMPASSION</p>
+              <span class="block h-1 w-16 bg-green-300 xl:mb-5 mb-3"></span>
+              <div>
+                <p class="text-neutral-600 text-lg mb-1">WellHub Member</p>
+                <p class="font-semibold">DR. EMMA CARTER</p>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-cols-12 gap-6">
+            <div class="col-span-6">
+              <img src="assets/images/blog/blog-details3.webp" alt="img" class="w-full h-full reveal_anim">
+            </div>
+            <div class="col-span-6">
+              <h3 class="fade_anim text-neutral-900" data-delay=".4">
+                Your Roadmap to Balanced Health
+              </h3>
+            </div>
+          </div>
+
+
           <div class="relative">
             <div class="relative z-[1]">
               <img src="./assets/images/blog-details-1.webp" class="reveal_anim rounded-xl w-full mb-4 xl:mb-6" alt="" />
@@ -260,16 +323,7 @@
                 <br />
                 As eco-friendly farming practices become the standard, newcomers can build a reputation for quality, sustainability, and responsible stewardship, helping to ensure the long-term success of their farm while contributing to the health of the planet.
               </p>
-              <div class="mb-6 rounded-xl overflow-hidden bg-green-50 p-4 text-center xl:p-10 border-l-4 border-green-500 relative after:size-[550px] after:bg-neutral-900/10 after:absolute after:top-1/2 after:-translate-y-1/2 after:-right-1/2 after:translate-x-16 after:bottom-0 after:rounded-s-[100%]">
-                <div class="flex flex-col items-center max-w-2xl mx-auto">
-                  <p class="text-2xl font-semibold text-neutral-900 mb-5">Farming sustainably today ensures a greener, healthier tomorrow for future generations.</p>
-                  <span class="block h-1 w-16 bg-green-500 mb-5"></span>
-                  <div>
-                    <p class="text-neutral-600 text-sm mb-1">WellHub Member</p>
-                    <p class="font-semibold">DR. EMMA CARTER</p>
-                  </div>
-                </div>
-              </div>
+              
               <p class="m-text text-neutral-600 mb-6">
                 Starting an eco-friendly farm can be a rewarding and sustainable journey, especially for those new to farming. Embracing environmentally conscious practices not only helps protect the planet but also ensures long-term success in Physiotherapy. For newcomers, the first step is to focus on soil health, as healthy soil is the foundation
                 of any thriving farm. Incorporating organic fertilizers, compost, and cover crops can enhance soil fertility naturally, reducing the need for chemical inputs. Crop rotation is another crucial practice that helps maintain soil structure and prevent pest and disease build-up. Additionally, conserving water through efficient irrigation
@@ -383,83 +437,89 @@
           </div>
         </div>
         <div class="col-span-12 md:col-span-5 xl:col-span-4 space-y-4 xl:space-y-6">
-          <div class="box">
-            <h4 class="pb-4 xl:pb-6 text-2xl font-semibold">Search</h4>
-            <form class="px-4 py-2 w-full rounded-md bg-neutral-0 border border-neutral-0 focus-within:border-green-500 flex items-center gap-2">
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">Search</h4>
+            <form class="px-3 py-2 w-full bg-neutral-20 border border-neutral-0 focus-within:border-green-500 flex items-center gap-2">
               <input type="text" placeholder="Search" id="search" class="bg-transparent w-full py-0.5" />
-              <button><i class="hgi-stroke hgi-search-01"></i></button>
+              <button class="w-[44px] min-w-[44px] h-[44px] bg-green-300 text-neutral-0"><i class="hgi-stroke hgi-search-01"></i></button>
             </form>
           </div>
-
-          <div class="box">
-            <p class="font-semibold text-2xl mb-5">Categories</p>
-            <div class="divide-y divide-neutral-40">
-              <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Physiotherapy</p>
-                <i class="hgi-stroke hgi-arrow-right-02 text-xl"></i>
-              </a>
-              <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Dairy Farm</p>
-                <i class="hgi-stroke hgi-arrow-right-02 text-xl"></i>
-              </a>
-              <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Organic Farm</p>
-                <i class="hgi-stroke hgi-arrow-right-02 ext-xl"></i>
-              </a>
-              <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Equipment Store</p>
-                <i class="hgi-stroke hgi-arrow-right-02 text-xl"></i>
-              </a>
-              <a href="#" class="flex w-full justify-between rounded-none items-center duration-300 hover:bg-neutral-0 hover:px-4 py-3.5 hover:rounded-lg gap-3">
-                <p class="m-text font-medium">Farm Shop</p>
-                <i class="hgi-stroke hgi-arrow-right-02 text-xl"></i>
-              </a>
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">Categories</h4>
+            <ul class="space-y-3 border-b border-neutral-30 pb-5 mb-6 list-disc ps-4">
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Holistic Wellness (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Pain Management (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Spinal Health (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Stress Relief (4)</a>
+              </li>
+              <li>
+                <a href="blog-details.html" class="xl:text-lg text-base text-neutral-400">Chiropractic Benefits (4)</a>
+              </li>
+            </ul>
+            <div class="flex items-center xl:gap-3 gap-2 mb-6">
+              <img src="assets/images/blog/emily.png" alt="img" class="rounded-full w-16 h-16">
+              <div>
+                <span class="block text-neutral-900 mb-1 text-xl">Dr. Emily Carter</span>
+                <span class="block text-neutral-900 mb-1 text-sm">Skin Spacialist</span>
+              </div>
             </div>
+            <a href="blog-details.html" class="py-4 px-4 w-full text-center f-center bg-green-300 text-neutral-0 hover:bg-green-400 font-semibold duration-300">Book  Appointment</a>
           </div>
-          <div class="box">
-            <p class="capitalize text-2xl font-semibold mb-5">Recent Posts</p>
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">RECENT POST</h4>
             <div class="space-y-4">
               <div class="flex items-center gap-3">
-                <div class="size-[114px] shrink-0">
-                  <img src="./assets/images/blog-1.webp" class="rounded-md object-cover object-center h-full" alt="" />
+                <div class="size-[86px] shrink-0">
+                  <img src="./assets/images/blog/blog-recent1.png" class="object-cover object-center h-full" alt="" />
                 </div>
                 <div>
-                  <p class="text-sm text-neutral-600 mb-1">January 13, 2025</p>
-                  <p class="lg:text-lg font-medium mb-1">Explore Modern Irrigation Techniques Today</p>
-                  <a href="#" class="flex items-center text-sm text-green-500 gap-2 font-semibold">Read More <i class="hgi-stroke hgi-arrow-right-02"></i></a>
+                  <p class="xl:text-base text-sm text-neutral-400 mb-1">December 6, 2025</p>
+                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Managing Stress Through Daily Practices</a>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <div class="size-[114px] shrink-0">
-                  <img src="./assets/images/blog-2.webp" class="rounded-md object-cover object-center h-full" alt="" />
+                <div class="size-[86px] shrink-0">
+                  <img src="./assets/images/blog/blog-recent2.png" class="object-cover object-center h-full" alt="" />
                 </div>
                 <div>
-                  <p class="text-sm text-neutral-600 mb-1">January 13, 2025</p>
-                  <p class="lg:text-lg font-medium mb-1">Best Organic Fertilizers for Healthy Crops</p>
-                  <a href="#" class="flex items-center text-sm text-green-500 gap-2 font-semibold">Read More <i class="hgi-stroke hgi-arrow-right-02"></i></a>
+                  <p class="xl:text-base text-sm text-neutral-400 mb-1">December 3, 2025</p>
+                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Chiropractic Care for Active Lifestyles</a>
                 </div>
               </div>
               <div class="flex items-center gap-3">
-                <div class="size-[114px] shrink-0">
-                  <img src="./assets/images/blog-3.webp" class="rounded-md object-cover object-center h-full" alt="" />
+                <div class="size-[86px] shrink-0">
+                  <img src="./assets/images/blog/blog-recent3.png" class="object-cover object-center h-full" alt="" />
                 </div>
                 <div>
-                  <p class="text-sm text-neutral-600 mb-1">January 13, 2025</p>
-                  <p class="lg:text-lg font-medium mb-1">Optimizing Your Crop Harvest Efficiently</p>
-                  <a href="#" class="flex items-center text-sm text-green-500 gap-2 font-semibold">Read More <i class="hgi-stroke hgi-arrow-right-02"></i></a>
+                  <p class="xl:text-base text-sm text-neutral-400 mb-1">November 27, 2025</p>
+                  <a href="blog-details.html" class="xl:text-lg text-base text-neutral-900  font-semibold">Benefits of Group Therapy Sessions</a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="box">
-            <p class="capitalize text-2xl font-semibold mb-5">popular tags</p>
-            <div class="flex flex-wrap gap-4">
-              <a href="#" class="py-2 px-5 bg-neutral-0 rounded-full capitalize font-medium text-sm">FarmTips</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 rounded-full capitalize font-medium text-sm">Soil</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 rounded-full capitalize font-medium text-sm">Organic</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 rounded-full capitalize font-medium text-sm">Farm</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 rounded-full capitalize font-medium text-sm">Agrotech</a>
-              <a href="#" class="py-2 px-5 bg-neutral-0 rounded-full capitalize font-medium text-sm">GreenFarm</a>
+          <div class="boxs bg-neutral-0 xxl:p-8 xl:p-6 p-5 border border-neutral-30">
+            <h4 class="pb-4 xl:pb-5 text-xl font-bold uppercase text-neutral-900">RELETED TAGS</h4>
+            <div class="flex flex-wrap gap-2">
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">practice</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Expert</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Massage</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Center</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">Health</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">therapy</a>
+              <a href="#" class="py-2 px-5 bg-neutral-0 border border-neutral-30 capitalize font-medium xl:text-base text-sm text-neutral-400 duration-300 hover:bg-green-300 hover:text-neutral-0">trauma</a>
+            </div>
+          </div>
+          <div class="f-center py-20 lg:h-[440px] relative after:absolute after:w-full after:h-full after:top-0 after:start-0 after:bg-neutral-900 after:opacity-50 bg-cover after:z-[-1] z-[1]" data-bg="assets/images/global/product-big-thumbnail1.webp">
+            <div class="flex flex-col items-center">
+              <h1 class="text-neutral-0 lg:mb-14 mb-10">WellHub</h1>
+              <a href="contact-us.html" class="btn-primary !bg-neutral-0 !text-neutral-900">Get in Touch <i class="hgi-stroke hgi-arrow-right-01 !text-neutral-0 !bg-green-300"></i></a>
             </div>
           </div>
         </div>
