--- a/src/blogs.html
+++ b/src/blogs.html
@@ -395,6 +395,13 @@
               </div>                  
             </div>                  
         </div>
+        <div class="pt-10 xl:pt-14 flex justify-center gap-2">
+          <a href="#" class="navigation-btn size-10 text-base active">1</a>
+          <a href="#" class="navigation-btn size-10 text-base">2</a>
+          <a href="#" class="navigation-btn size-10 text-base">3</a>
+          <a href="#" class="navigation-btn size-10 text-base">4</a>
+          <a href="#" class="navigation-btn size-10 text-base">5</a>
+        </div>
       </div>
     </section>
     <!-- Blog section end -->
