list-added-blog-detaiuls

--- a/src/blog-details.html
+++ b/src/blog-details.html
@@ -282,9 +282,15 @@
               <img src="assets/images/blog/blog-details3.webp" alt="img" class="w-full h-full reveal_anim">
             </div>
             <div class="col-span-6">
-              <h3 class="fade_anim text-neutral-900" data-delay=".4">
+              <h3 class="fade_anim text-neutral-900 xl:mb-4 mb-3" data-delay=".4">
                 Your Roadmap to Balanced Health
               </h3>
+              <ul class="grid gap-2">
+                <li class="text-base text-neutral-900 font-medium">Personalized care for individual needs</li>
+                <li class="text-base text-neutral-900 font-medium">Expert guidance for lasting results</li>
+                <li class="text-base text-neutral-900 font-medium">Holistic approach to overall well-being</li>
+                <li class="text-base text-neutral-900 font-medium">Comprehensive support for physical recovery</li>
+              </ul>
             </div>
           </div>
 
